<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".sent">

    <TextView
        android:id="@+id/nameHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:text="@string/nameHeader"
        android:textColor="@color/WHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/WHITE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameHeader" />

    <TextView
        android:id="@+id/startYearHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="end"
        android:text="@string/startYearHeader"
        android:textColor="@color/WHITE"
        app:layout_constraintEnd_toStartOf="@+id/endYearHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/endYearHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/endYearHeader"
        android:textColor="@color/WHITE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/startYearHeader"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/startYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/WHITE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/startYearHeader"
        app:layout_constraintStart_toStartOf="@+id/startYearHeader"
        app:layout_constraintTop_toBottomOf="@+id/startYearHeader" />

    <TextView
        android:id="@+id/endYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:textColor="@color/WHITE"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/endYearHeader"
        app:layout_constraintStart_toStartOf="@+id/endYearHeader"
        app:layout_constraintTop_toBottomOf="@+id/endYearHeader" />

    <TextView
        android:id="@+id/dashBetweenYears"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/dash"
        android:textColor="@color/WHITE"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/endYear"
        app:layout_constraintEnd_toStartOf="@+id/endYear"
        app:layout_constraintStart_toEndOf="@+id/startYear"
        app:layout_constraintTop_toBottomOf="@+id/startYearHeader" />

    <TextView
        android:id="@+id/description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/WHITE"
        android:textSize="24sp"
        android:textStyle="normal|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashBetweenYears" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="startEditing"
        android:text="@string/editPresident"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveEdits"
        android:text="@string/saveEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="stopEditing"
        android:text="@string/cancelEdit"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editButton" />

    <Button
        android:id="@+id/removeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="removeItem"
        android:text="@string/removePresident"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editButton"
        app:layout_constraintTop_toTopOf="@+id/editButton" />

    <EditText
        android:id="@+id/presidentNameEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/nameHint"
        android:inputType="textPersonName"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/name"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/nameHeader" />

    <EditText
        android:id="@+id/presidentDescriptionEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/descriptionHint"
        android:inputType="textMultiLine"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/description"
        app:layout_constraintEnd_toEndOf="@+id/description"
        app:layout_constraintStart_toStartOf="@+id/description"
        app:layout_constraintTop_toTopOf="@+id/description" />

    <EditText
        android:id="@+id/presidentStartYearEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/yearHint"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/startYear"
        app:layout_constraintEnd_toEndOf="@+id/startYear"
        app:layout_constraintStart_toStartOf="@+id/startYear"
        app:layout_constraintTop_toBottomOf="@+id/startYearHeader" />

    <EditText
        android:id="@+id/presidentEndYearEdit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start"
        android:hint="@string/yearHint"
        android:inputType="date"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/endYear"
        app:layout_constraintEnd_toEndOf="@+id/endYear"
        app:layout_constraintStart_toStartOf="@+id/endYear"
        app:layout_constraintTop_toBottomOf="@+id/endYearHeader" />

    <TextView
        android:id="@+id/indexHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/WHITE"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButton" />

    <Button
        android:id="@+id/moveUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveUp"
        android:onClick="moveUp"
        app:layout_constraintEnd_toStartOf="@+id/moveDown"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indexHeader" />

    <Button
        android:id="@+id/moveDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moveDown"
        android:onClick="moveDown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/moveUp"
        app:layout_constraintTop_toBottomOf="@+id/indexHeader" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moveDown" />

</androidx.constraintlayout.widget.ConstraintLayout>